--- a/index.html
+++ b/index.html
@@ -204,10 +204,36 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
                             Advances in Intelligent Systems and Computing, Proceedings of National Cyber Summit 2020 <br>
                         </p>
                         <button type="button" class="btn btn-info btn-xs" data-target="#ncs20vuln-abs" data-toggle="collapse">Abstract</button>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="privacy_control_shd.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs" data-target="#ncs20vuln-bib" data-toggle="collapse">Bib</button>
+
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://link.springer.com/chapter/10.1007%2F978-3-030-58703-1_13">SpringerLink</a></button>
                         <p></p>
                         <div id="ncs20vuln-abs" class="collapse">
-                            Abstract
+                            Smart Home Devices (SHDs) offer convenience that comes at the cost of security and privacy. SHDs can be subject to attacks and they can be used to conduct attacks on businesses or governments providing services to individuals. In this paper, we report vulnerabilities that have been published in research papers in IEEE Xplore digital library and ACM digital library. We followed a systematic approach to search for vulnerabilities in the literature, analyzed them and placed them in common categories. The study resulted in 153 vulnerabilities. The categories are based on the place of occurrence or component of smart home architecture, such as device, protocol, gateway, network, and software architecture. We also identified areas of research and development that have been underexplored in the past and need further efforts. Researchers, developers and users will benefit from this comprehensive analysis and systematic categorization of smart home vulnerabilities.
+                        </div>
+                        <div id="ncs20vuln-bib" class="collapse">
+@inproceedings{DBLP:conf/ncs/ChhetriM20,
+  author    = {Chola Chhetri and
+               Vivian Motti},
+  editor    = {Kim{-}Kwang Raymond Choo and
+               Tommy Morris and
+               Gilbert L. Peterson and
+               Eric Imsand},
+  title     = {Identifying Vulnerabilities in Security and Privacy of Smart Home
+               Devices},
+  booktitle = {National Cyber Summit {(NCS)} Research Track 2020, Huntsville, AL,
+               USA, June 2-4, 2020},
+  series    = {Advances in Intelligent Systems and Computing},
+  volume    = {1271},
+  pages     = {211--231},
+  publisher = {Springer},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/978-3-030-58703-1\_13},
+  doi       = {10.1007/978-3-030-58703-1\_13},
+  timestamp = {Fri, 18 Sep 2020 18:35:06 +0200},
+  biburl    = {https://dblp.org/rec/conf/ncs/ChhetriM20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
                         </div>
                        
                     </td>
