--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
         <h2><b><a id="news"> Recent Activities </a></b></h2>
 
         <dl class="dl-horizontal">
+            <dt> July 2022 </dt>            <dd> Presented our paper "Privacy Concerns about Smart Home Devices: A Comparative Analysis between Non-Users and Users" at AHFE'22.  </dd>
             <dt> July 2022 </dt>            <dd> Presented our paper "Designing and Evaluating a Prototype for Data-related Privacy Controls in a Smart Home" at HAISA'22.  </dd>
             <dt> May 2022 </dt>            <dd> Paper accepted at HAISA'22 for publication.  </dd>
             <dt> May 2022 </dt>            <dd> Paper accepted at HFES'22 for publication.  </dd>
@@ -348,7 +349,8 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
                             <strong> Chola Chhetri</strong>, Vivian Motti <br>
                             AHFE International Open Access, Proceedings of AHFE 2022 <br>
                         </p>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="pubs/2022ahfe-cr.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://openaccess-api.cms-conferences.org/articles/download/978-1-958651-29-2_12">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://video.ibm.com/playlist/653493/video/131937663"> Video </a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#ahfe22-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#ahfe22-bib" data-toggle="collapse">Bib</button>
                         <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="http://doi.org/10.54941/ahfe1002207
