--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
                             <strong> Chola Chhetri</strong>, Vivian Motti <br>
                             PACMHCI-Proceedings of the ACM on Human-Computer Interaction, CSCW 2022 <br>
                         </p>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="pubs/2022cscw.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022cscw.pdf">PDF</a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw22-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw22-bib" data-toggle="collapse">Bib</button>
 
@@ -275,7 +275,7 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
                             <strong> Chola Chhetri</strong>, Vivian Motti <br>
                             N. Clarke and S. Furnell (Eds.): HAISA 2022, IFIP AICT 658 <br>
                         </p>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="pubs/2022haisa.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022haisa.pdf">PDF</a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#haisa22-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#haisa22-bib" data-toggle="collapse">Bib</button>
                         <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://doi.org/10.1007/978-3-031-12172-2_19"> Springer </a></button>
@@ -314,7 +314,7 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
                             <strong> Chola Chhetri</strong>, Vivian Motti <br>
                             Sage, Proceedings of HFES Annual Meeting 2022 <br>
                         </p>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="pubs/2022hfes.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022hfes.pdf">PDF</a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#hfes22-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#hfes22-bib" data-toggle="collapse">Bib</button>
                         <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href=""> Sage </a></button>
@@ -475,7 +475,7 @@ Thus, cybersecurity education has become crucial in providing security awareness
                             <strong> Chola Chhetri</strong>, Vivian Motti <br>
                             Ubiquitous Privacy: Research and Design for Mobile and IoT Platforms, Networked Privacy Workshop at CSCW 2019 <br>
                         </p>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="pubs/2019cscw.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2019cscw.pdf">PDF</a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw19-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw19-bib" data-toggle="collapse">Bib</button>
                         <p></p>
