--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Previous academic degrees include an M.S. in Information Security and Assurance 
                             <strong> Chola Chhetri</strong>, Vivian Motti <br>
                             PACMHCI-Proceedings of the ACM on Human-Computer Interaction, CSCW 2022 <br>
                         </p>
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022cscw.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022cscw_preprint.pdf">PDF</a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw22-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw22-bib" data-toggle="collapse">Bib</button>
 
