--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ __        __   _
             <div class="col-xs-6 col-sm-8">
                 <h1>
                     Chola Chhetri <br>
-                    <font size=6> <small> Ph.D. Candidate, M.Sc, M.S. <br> CISSP, CEH, CCSK, Security+, Network+ </small> </font>
+                    <font size=6> <small> PhD, MSc, MS <br> CISSP, CEH, CCSK, Security+, Network+ </small> </font>
                 </h1>
                 <p>
                     	Human Centric Design Lab <br>
@@ -118,11 +118,11 @@ __        __   _
 
 
         <hr id ="about" size="2" color="#800000">
-        <h2><b><a id="news"> About Me </a></b></h2>
+        <h2><b><a id="news"> Bio </a></b></h2>
 
-            <p> I am a Ph.D. Information Technology candidate at the <a target="_blank" href="https://cec.gmu.edu/"> College of Engineering and Computing </a> of <a target="_blank" href="https://www2.gmu.edu/"> George Mason University</a>. My research advisor is <a target="_blank" href="https://sites.google.com/site/vivianmotti/welcome"> Dr. Vivian Motti</a>.
-  My research interests include: usable privacy and security, Internet of Things, smart home technologies, and human-computer interaction.  <br> <br>
-Previous academic degrees include an M.S. in Information Security and Assurance from George Mason University and an M. Sc. in Computer Science. I have held multiple industry certifications, including ISC2’s CISSP, EC Council’s CEH, Cloud Security Alliance’s CCSK, and CompTIA’s Security+ and Network+. I have worked in academia, government, and non-profit sectors globally in areas of network management, network administration, and system administration. I have taught cybersecurity, networks, computer architecture, and computer science at various schools and colleges globally.
+            <p> My research interests include: usable privacy and security, Internet of Things, smart home technologies, and human-computer interaction.  <br> <br>
+		I received my PhD in <a target="_blank" href="https://ist.gmu.edu/academics/phd-it"> Information Technology </a> from the <a target="_blank" href="https://cec.gmu.edu/"> College of Engineering and Computing </a> at <a target="_blank" href="https://www2.gmu.edu/"> George Mason University</a> in 2022. 
+Additionally, I completed an MS in Information Security and Assurance from George Mason University and an MS in Computer Science. I have held multiple industry certifications, including ISC2’s CISSP, EC Council’s CEH, Cloud Security Alliance’s CCSK, and CompTIA’s Security+ and Network+. I have worked in academia, government, and non-profit sectors globally in areas of network management, network administration, and system administration. I have taught cybersecurity, networks, computer architecture, and computer science at various schools and colleges globally.
 		<!--
             <p class="lead">You can find my CV <a target="_blank" href="http://web.cs.ucla.edu/~zyuan/zengwen-yuan-cv.pdf">here</a>.  My <a href="http://scholar.google.com/citations?user=u42HjrwAAAAJ">Google Scholar profile</a>.</p>
         </div>
