--- a/publications.html
+++ b/publications.html
@@ -149,6 +149,46 @@ _____
         </div>
 
 
+        <h3> Dissertation</h3>
+
+        <div class="panel panel-default">
+            <!--<div class="panel-body">-->
+            <table class="table table-hover">
+                <tbody>
+			<!-- DISSERTATION -->
+                <tr>
+                    <td>
+                        <span class="label label-primary">J01</span>
+                    </td>
+                    <td>
+                        <h4 class="list-group-item-heading">
+                            Designing for Privacy in Smart Home Devices: Vulnerabilities, Concerns and User-Centric Privacy Controls   
+                        </h4>
+                        <p class="author">
+                            <strong> Chola Chhetri</strong> <br>
+                            George Mason University, 2022 <br>
+                        </p>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022phdthesis.pdf">PDF</a></button>
+                        <button type="button" class="btn btn-info btn-xs" data-target="#thesis22-bib" data-toggle="collapse">Bib</button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href=""> Proquest </a></button>
+                        <p></p>
+                        <div id="thesis22-bib" class="collapse">
+				@phdthesis{chhetri2022thesis,
+  author  = {Chola Chhetri},
+  title   = {Designing for Privacy in Smart Home Devices: Vulnerabilities, Concerns and User-Centric Privacy Controls},
+  school  = {George Mason University},
+  type    = {{PhD} dissertation},
+  year    = {2022}
+}
+                        </div>
+                       
+                    </td>
+                </tr>                            
+                </tbody>
+            </table>
+        </div>
+
+
         <h3>Refereed Proceedings/Book Chapters</h3>
 
         <div class="panel panel-default">
