--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ __        __   _
 
         <div class="row row-offcanvas row-offcanvas-right">
 		<!-- following div inserts picture: -->
-            <div class="col-xs-6 col-sm-3"><img alt="Affinity Diagram (Workshop)" src="webpage_files/22-spr-daily-writer-award.png" class="img-rounded" height="240px" width="270px">
+            <div class="col-xs-6 col-sm-3"><img alt="Affinity Diagram (Workshop)" src="webpage_files/23-spr-daily-writer-award.png" class="img-rounded" height="240px" width="270px">
             </div> 
             
 
@@ -99,14 +99,16 @@ __        __   _
                     Chola Chhetri <br>
                     <font size=6> <small> PhD, MSc, MS <br> CISSP, CEH, CCSK, Security+, Network+ </small> </font>
                 </h1>
-                <p>
+                <!-- <p>
                     	Human Centric Design Lab <br>
 			Department of Information Sciences and Technology <br>
 			College of Engineering and Computing <br>
                      	Fairfax, VA 22030 <br>
-                </p>
+                </p> -->
 
-                <p>Email: <code> cchhetri [at] gmu [dot] edu </code></p>
+                <p>	Email: <code> cchhetri [at] gmu [dot] edu </code> <br>
+			Research interests: Usable privacy and security, Internet of Things, smart home technologies, and human-computer interaction.
+		</p>
             </div>
             <!-- div class="col-xs-6 col-sm-1"><img alt="Affinity Diagram (Workshop)" src="webpage_files/22-smr-daily-writer-award.png" class="img-rounded" height="240px" width="270px" -->
             </div> 
@@ -120,9 +122,16 @@ __        __   _
         <hr id ="about" size="2" color="#800000">
         <h2><b><a id="news"> Bio </a></b></h2>
 
-            <p> My research interests include: usable privacy and security, Internet of Things, smart home technologies, and human-computer interaction.  <br> <br>
-		I received my PhD in <a target="_blank" href="https://ist.gmu.edu/academics/phd-it"> Information Technology </a> from the <a target="_blank" href="https://cec.gmu.edu/"> College of Engineering and Computing </a> at <a target="_blank" href="https://www2.gmu.edu/"> George Mason University</a> in 2022. 
-Additionally, I completed an MS in Information Security and Assurance from George Mason University and an MS in Computer Science. I have held multiple industry certifications, including ISC2’s CISSP, EC Council’s CEH, Cloud Security Alliance’s CCSK, and CompTIA’s Security+ and Network+. I have worked in academia, government, and non-profit sectors globally in areas of network management, network administration, and system administration. I have taught cybersecurity, networks, computer architecture, and computer science at various schools and colleges globally.
+<p>
+Dr. Chhetri is a Professor of Information and Engineering Technologies at NVCC. He holds a Ph.D. in <a target="_blank" href="https://ist.gmu.edu/academics/phd-it"> Information Technology </a> with a concentration in Information Security from the <a target="_blank" href="https://cec.gmu.edu/"> College of Engineering and Computing </a> at <a target="_blank" href="https://www2.gmu.edu/"> George Mason University </a>. He holds an MS in ISA from George Mason University and an MS in Computer Science. His research focuses on eliciting privacy concerns of users and non-users of smart home devices, and designing user-centric privacy control solutions for smart home technology. His research lies at the intersection of human-computer interaction (HCI), security, and privacy. He has authored publications in premier academic venues across HCI, usable security and privacy, and education (e.g. PACMHCI, CSCW, ACM SIGITE, iCONF, HAISA, HFES, NCS, AHFE). His research has been supported by NSF, GMU, VCCS, 4VA and CCI. </p>
+
+<p>
+Dr. Chhetri holds industry certifications, including ISC2’s CISSP, EC Council’s CEH, Cloud Security Alliance’s CCSK, and CompTIA’s Security+ and Network+. He has worked in academia, government, and non-profit sectors globally in areas of network management, network administration, and system administration. He has taught cybersecurity, networks, computer architecture, and computer science at undergraduate and graduate levels. He has developed cybersecurity curriculum and investigated effective cybersecurity pedagogical methods for online, hybrid, and in-person instruction. </p>
+
+
+
+
+
 		<!--
             <p class="lead">You can find my CV <a target="_blank" href="http://web.cs.ucla.edu/~zyuan/zengwen-yuan-cv.pdf">here</a>.  My <a href="http://scholar.google.com/citations?user=u42HjrwAAAAJ">Google Scholar profile</a>.</p>
         </div>
@@ -133,7 +142,8 @@ Additionally, I completed an MS in Information Security and Assurance from Georg
         <h2><b><a id="news"> Recent Activities </a></b></h2>
 
         <dl class="dl-horizontal">
-            <dt> July 2022 </dt>            <dd> Presented our paper "Privacy Concerns about Smart Home Devices: A Comparative Analysis between Non-Users and Users" at AHFE'22.  </dd>
+            <dt> Dec 2022 </dt>            <dd> Paper accepted by Information and Computer Security journal for publication.  </dd>
+	    <dt> July 2022 </dt>            <dd> Presented our paper "Privacy Concerns about Smart Home Devices: A Comparative Analysis between Non-Users and Users" at AHFE'22.  </dd>
             <dt> July 2022 </dt>            <dd> Presented our paper "Designing and Evaluating a Prototype for Data-related Privacy Controls in a Smart Home" at HAISA'22.  </dd>
             <dt> May 2022 </dt>            <dd> Paper accepted at HAISA'22 for publication.  </dd>
             <dt> May 2022 </dt>            <dd> Paper accepted at HFES'22 for publication.  </dd>
@@ -206,6 +216,70 @@ Additionally, I completed an MS in Information Security and Assurance from Georg
             <!--<div class="panel-body">-->
             <table class="table table-hover">
                 <tbody>
+			<!-- ICS22 -->
+                <tr>
+                    <td>
+                        <span class="label label-primary"> J02 </span>
+                    </td>
+                    <td>
+                        <h4 class="list-group-item-heading">
+                            Enhancing the Design of Data-Related Privacy Controls for Smart Home Devices       <span class="badge"><a class="conf" target="_blank" href="https://www.emeraldgrouppublishing.com/journal/ics"> ICS22 </a></span>
+                        </h4>
+                        <p class="author">
+                            <strong> Chola Chhetri</strong>, Vivian Motti <br>
+                            Information and Computer Security, Emerald Publishing 2022 <br>
+                        </p>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022ics.pdf"> PDF </a></button>
+                        <button type="button" class="btn btn-info btn-xs" data-target="#ics22-abs" data-toggle="collapse"> Abstract </button>
+                        <button type="button" class="btn btn-info btn-xs" data-target="#ics22-bib" data-toggle="collapse"> Bib </button>
+
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://www.emeraldgrouppublishing.com/journal/ics"> ICS </a></button>
+                        <p></p>
+                        <div id="ics22-abs" class="collapse">
+                            Purpose: Past research shows that users of smart home devices have
+privacy concerns. These concerns have been validated from technical re-
+search that shows smart home devices introduce a lot of privacy risks.
+However, there is limited research in addressing these concerns and risks.
+Design/methodology/approach: In this paper, we follow a user-
+centered design approach to design data-related privacy controls from de-
+sign requirements backed by literature. We test the design for usability
+and perceived information control using psychometrically validated scales.
+For this purpose, we created two variations of the prototype (My-
+Cam1 with a listing of data-related privacy controls and MyCam2 with
+three privacy presets) and tested them in a between-subjects experimental
+setting. Study participants (n=207) were recruited via Mechanical Turk
+and asked to use the prototype app. An online survey was distributed to
+the participants to measure some usability and privacy-related constructs.
+Findings: Findings show that the presented prototype design were
+usable and met the privacy control needs of users. The prototype design
+with privacy presets was found to be significantly more usable than the
+list of privacy controls.
+Originality: The findings of this article are original and build on the
+findings presented in our HAISA paper. This paper contributes better
+and usable designs of privacy controls for smart home applications.
+                        </div>
+                        <div id="ics22-bib" class="collapse">
+				@article{chhetri2022enhancing,
+    author = {Chhetri, Chola and Motti, Vivian G.},
+    title = {User Centric Privacy Controls for Smart Home},
+    year = {2022},
+    issue_date = {Mar 2023},
+    publisher = {Emerald Publishing},
+    address = {UK},
+    volume = {31},
+    number = {EarlyCite},
+    url = {https://doi.org/10.1108/ICS-11-2022-0173},
+    doi = {10.1108/ICS-11-2022-0173},
+    journal = {Information and Computer Security},
+    month = {Mar},
+    articleno = {},
+    numpages = {20},
+    keywords = {}
+}
+                        </div>
+                       
+                    </td>
+                </tr>                            
 			<!-- CSCW22 -->
                 <tr>
                     <td>
@@ -222,8 +296,7 @@ Additionally, I completed an MS in Information Security and Assurance from Georg
                         <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="publications/2022cscw_preprint.pdf">PDF</a></button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw22-abs" data-toggle="collapse">Abstract</button>
                         <button type="button" class="btn btn-info btn-xs" data-target="#cscw22-bib" data-toggle="collapse">Bib</button>
-
-                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://dl.acm.org/journal/pacmhci">ACM DL</a></button>
+                        <button type="button" class="btn btn-info btn-xs"><a class="conf" target="_blank" href="https://dl.acm.org/doi/10.1145/3555769">ACM DL</a></button>
                         <p></p>
                         <div id="cscw22-abs" class="collapse">
                             The widespread adoption of smart home devices (SHD) has increased privacy concerns among users, yet user-friendly controls are lacking. While there is a large body of research focused on understanding privacy concerns and threat models of SHD users, there is limited research so far aimed at informing the development of privacy controls in SHDs. This paper presents the results of 25 interviews focused on characterizing the users’ needs for privacy controls. Through qualitative analysis of interview data, we present 7 design factors and 32 sub-factors for the design of privacy controls in SHDs. The interview findings informed the design of a survey that was deployed to 440 adult SHD users to gain quantitative insights on privacy control requirements and to complement the interview findings. Based on the findings, we discuss a privacy control framework that guides designers towards user-centric privacy controls.
@@ -232,18 +305,18 @@ Additionally, I completed an MS in Information Security and Assurance from Georg
 				@article{chhetri2022user,
     author = {Chhetri, Chola and Motti, Vivian G.},
     title = {User Centric Privacy Controls for Smart Home},
-    year = {Press},
+    year = {2022},
     issue_date = {June 2022},
     publisher = {Association for Computing Machinery},
     address = {New York, NY, USA},
     volume = {6},
     number = {CSCW2},
-    url = {},
-    doi = {},
+    url = {https://doi.org/10.1145/3555769},
+    doi = {10.1145/3555769},
     journal = {Proc. ACM Hum.-Comput. Interact.},
-    month = {In},
-    articleno = {},
-    numpages = {34},
+    month = {November},
+    articleno = {349},
+    numpages = {36},
     keywords = {}
 }
                         </div>
